#1459 Updates gradle build to fix bug related to building releases for each OS